--- a/Hippo/InternalClasses/Views/InformationView/InformationView.xib
+++ b/Hippo/InternalClasses/Views/InformationView/InformationView.xib
@@ -15,19 +15,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ei8-Za-ACZ">
-                    <rect key="frame" x="40" y="297.5" width="334" height="151.5"/>
+                    <rect key="frame" x="98" y="337.5" width="218.5" height="151.5"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="KQU-Xa-g5i">
-                            <rect key="frame" x="0.0" y="0.0" width="334" height="151.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="218.5" height="151.5"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noConversationImage" translatesAutoresizingMaskIntoConstraints="NO" id="gyI-5h-NaH">
-                                    <rect key="frame" x="0.0" y="0.0" width="334" height="100"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="218.50000000000006" height="100.00000000000003"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="100" id="hsz-rY-6jX"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Conversation avaliable" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UcK-DZ-soC">
-                                    <rect key="frame" x="0.0" y="130" width="334" height="21.5"/>
+                                    <rect key="frame" x="0.0" y="130" width="218.5" height="21.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -35,7 +35,7 @@
                             </subviews>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NuH-yc-rQ0">
-                            <rect key="frame" x="84" y="151.5" width="166" height="0.0"/>
+                            <rect key="frame" x="26" y="151.5" width="166" height="0.0"/>
                             <constraints>
                                 <constraint firstAttribute="height" id="Tmm-Gw-sk3"/>
                             </constraints>
@@ -57,7 +57,7 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Ei8-Za-ACZ" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" constant="-80" id="EAh-6T-ZgB"/>
+                <constraint firstItem="Ei8-Za-ACZ" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" constant="-40" id="EAh-6T-ZgB"/>
                 <constraint firstItem="Ei8-Za-ACZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="40" id="GWd-MT-7u2"/>
                 <constraint firstItem="NuH-yc-rQ0" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.4" id="Njp-vk-Wdh"/>
                 <constraint firstItem="Ei8-Za-ACZ" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="l5a-Te-Uq4"/>
