--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -1359,40 +1359,18 @@
             </objects>
             <point key="canvasLocation" x="2423" y="-145"/>
         </scene>
-        <!--Razor Pay View Controller-->
-        <scene sceneID="XzG-EN-dNe">
+        <!--Navigation Controller-->
+        <scene sceneID="NZT-if-8D7">
             <objects>
-                <viewController storyboardIdentifier="RazorPayViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="3cK-gA-NWm" customClass="RazorPayViewController" customModule="Hippo" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Aiq-GU-c8y"/>
-                        <viewControllerLayoutGuide type="bottom" id="q0h-7V-iwX"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="CPO-WC-78Y">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SJ1-9t-YgS" customClass="NavigationBar" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="VWz-yn-Ohy"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="SJ1-9t-YgS" firstAttribute="leading" secondItem="CPO-WC-78Y" secondAttribute="leading" id="LZa-yi-T3c"/>
-                            <constraint firstItem="SJ1-9t-YgS" firstAttribute="top" secondItem="Aiq-GU-c8y" secondAttribute="bottom" id="j7p-ZH-Ye7"/>
-                            <constraint firstAttribute="trailing" secondItem="SJ1-9t-YgS" secondAttribute="trailing" id="pNv-MH-KUi"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="view_NavBar" destination="SJ1-9t-YgS" id="Lxb-gv-fKf"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Tv3-Up-SOX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <navigationController id="RpE-1N-YN1" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="y4n-Z4-NbO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K7N-5J-1b8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3205.5999999999999" y="-145.27736131934034"/>
+            <point key="canvasLocation" x="3236" y="-153"/>
         </scene>
         <!--Level View Controller-->
         <scene sceneID="GfF-z1-9Zj">
